# webosbrowser-native

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.simple.txt  CMakeLists.txt  CMakeLists.txt.backup  CURRENT_STATUS.md  DEPLOY_GUIDE.md  Dockerfile.webos  F10_IMPLEMENTATION_SUMMARY.md  GETTING_STARTED.md  JOURNEY.md  README.md  build-webos.sh  package-webos.sh
.claude/: settings.json
.claude/agents/: architect.md  backend-dev.md  code-reviewer.md  doc-writer.md  frontend-dev.md  product-manager.md  project-planner.md  test-runner.md
.claude/commands/: auto-dev.md  commit.md  fullstack-feature-team.md  fullstack-feature.md  init-project.md  next-feature.md  quick-fix.md  wrap-up.md
.claude/scripts/: log-progress.sh  worktree-merge.sh  worktree-setup.sh
build_test/webosbrowser_tests_autogen/: deps  mocs_compilation.cpp
build_test/webosbrowser_tests_autogen/3XGCZSBEA2/: moc_TabManager.cpp.d
docs/: dev-log.md
docs/components/: DownloadManager.md  DownloadPanel.md  ErrorPage.md  KeyboardHandler.md  SearchEngine.md  SecurityIndicator.md
docs/project/: features-2.0.md  features.md  prd.md  roadmap.md
docs/specs/bookmark-management/: design.md  plan.md  requirements.md
docs/specs/download-management/: design.md  plan.md  requirements.md
docs/specs/download-manager/: design.md  plan.md  requirements.md
docs/specs/error-handling/: design.md  plan.md  requirements.md
docs/specs/favorites-home/: design.md  plan.md  requirements.md
docs/specs/favorites-home-screen/: design.md  plan.md  requirements.md
docs/specs/history-management/: design.md  implementation-summary.md  plan.md  requirements.md
docs/specs/https-security/: design.md  plan.md  requirements.md
docs/specs/https-security-indicator/: design.md  plan.md  requirements.md
docs/specs/loading-indicator/: design.md  plan.md  requirements.md
docs/specs/navigation-controls/: design.md  plan.md  requirements.md
docs/specs/project-setup/: design.md  plan.md  requirements.md
docs/specs/remote-control-shortcuts/: design.md  plan.md  requirements.md
docs/specs/remote-shortcuts/: design.md  plan.md  requirements.md
docs/specs/search-engine-integration/: design.md  plan.md  requirements.md
docs/specs/settings/: design.md  plan.md  requirements.md
docs/specs/tab-management/: design.md  plan.md  requirements.md
docs/specs/url-input-ui/: design.md  plan.md  requirements.md
docs/specs/webview-integration/: design.md  plan.md  requirements.md
docs/test-reports/: F-03-Test-Summary.md  F-03-URL-Input-UI-Test-Report.md  F-10_ErrorHandling_TestReport.md  F-10_TestCode_Summary.md  F11_PRE_TEST_CHECKLIST.md  F11_TEST_DOCUMENTATION_INDEX.md  F11_TEST_SCENARIOS.md  F11_VALIDATION_REPORT.md  F11_VALIDATION_SUMMARY.txt  F14_IMPLEMENTATION_SUMMARY.md  PG-3_INTEGRATION_VALIDATION_REPORT.md  PG-3_QA_TESTING_REPORT.md  PG-3_TESTING_SUMMARY.txt  README.md
resources/: resources.qrc
resources/icons/: README.md
resources/qml/: BookmarkPanel.qml  HistoryPanel.qml  HomeScreen.qml  NavBar.qml  SettingsPanel.qml  UrlBar.qml  main.qml
resources/styles/: dark.qss  light.qss
src/: main-simple.cpp  main.cpp
src/browser/: BrowserWindow.cpp  BrowserWindow.h  TabManager.cpp  TabManager.h  WebOSController.cpp  WebOSController.h  WebView.cpp  WebView.h  WebView_lunasvc.cpp  WebView_stub.cpp
src/models/: Bookmark.h
src/services/: BookmarkService.cpp  BookmarkService.h  DownloadManager.cpp  DownloadManager.h  HistoryService.cpp  HistoryService.h  SearchEngine.cpp  SearchEngine.h  SettingsService.cpp  SettingsService.h  StorageService.cpp  StorageService.h
src/ui/: BookmarkCard.cpp  BookmarkCard.h  BookmarkPanel.cpp  BookmarkPanel.h  DownloadPanel.cpp  DownloadPanel.h  ErrorPage.cpp  ErrorPage.h  HistoryPanel.cpp  HistoryPanel.h  HomePage.cpp  HomePage.h  LoadingIndicator.cpp  LoadingIndicator.h  NavigationBar.cpp  NavigationBar.h  SecurityIndicator.cpp  SecurityIndicator.h  SettingsPanel.cpp  SettingsPanel.h  URLBar.cpp  URLBar.h
src/utils/: DateFormatter.cpp  DateFormatter.h  KeyCodeConstants.h  Logger.cpp  Logger.h  SecurityClassifier.cpp  SecurityClassifier.h  URLValidator.cpp  URLValidator.h
tests/: CMakeLists.txt  CMakeLists_standalone.txt
tests/integration/: BrowserWindowErrorHandlingTest.cpp  BrowserWindowIntegrationTest.cpp  BrowserWindowTabManagerIntegrationTest.cpp  PG3IntegrationTest.md
tests/unit/: DownloadManagerTest.cpp  ErrorPageTest.cpp  KeyCodeMappingTest.cpp  SearchEngineTest.cpp  SecurityClassifierTest.cpp  TabManagerBasicTest.cpp  TabManagerTest.cpp  URLBarTest.cpp  URLValidatorTest.cpp  URLValidatorTest_SearchQuery.cpp
tests_only/: CMakeLists.txt  MockWebView.cpp
webos-meta/: .gitkeep  appinfo.json
